--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ height: 100%;
 .main-top {
   background-image: url(./images/tor2.jpg);
   background-position: center center;
-  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover; 
@@ -73,6 +72,7 @@ height: 100%;
   font-family: 'Libre Baskerville', serif;
   font-size: 90px;
   font-weight: 500;
+  text-align: center;
 }
 
 .first {
@@ -82,7 +82,7 @@ height: 100%;
 
 .h1-center {
   display: block;
-  padding-right: 20rem;
+  /* padding-right: 20rem; */
 }
 
 .lower-p {
@@ -179,18 +179,22 @@ height: 100%;
   .main-top {
     background-position: 35.88%;
   }
-  .h1-center {
+  /* .h1-center {
     padding-right: 0rem;
     padding-left: 77px;
   }
 
   #section07 {
     padding-top: 0px;
-  }
+  } */
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+  .main-top {
+    background-position: 35.88%;
+  }
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {}
